<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A7FFEB"
    android:padding="@dimen/sign_up_parent_layout_padding"
    tools:context=".ui.SignUpActivity">

        <com.example.achypur.notepadapp.view.ProfilePicture
            xmlns:customNS="http://schemas.android.com/apk/res/com.example.achypur.notepadapp"
            android:layout_centerHorizontal="true"
            android:id="@+id/sign_up_image"
            android:layout_width="@dimen/profile_custom_picture_width"
            android:layout_height="@dimen/profile_custom_picture_height"
            customNS:borderSize="@dimen/profile_custom_picture_border_size"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <Button
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sign_up_image"
            android:text="@string/upload_picture"
            android:textColor="@color/colorLoginText"
            android:id="@+id/sign_up_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/profile_edit_text_holder"
            android:orientation="vertical"
            android:layout_margin="@dimen/sign_up_input_layout_margin"
            android:paddingBottom="@dimen/sign_up_input_layout_padding_bottom"
            android:layout_below="@+id/sign_up_upload_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textCursorDrawable="@color/colorLoginText"
                    android:backgroundTint="@color/colorLoginText"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/profile_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login"
                    android:textCursorDrawable="@color/colorLoginText"
                    android:backgroundTint="@color/colorLoginText"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textCursorDrawable="@color/colorLoginText"
                    android:backgroundTint="@color/colorLoginText"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@color/colorLoginText"
                    android:backgroundTint="@color/colorLoginText"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/profile_confirm_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:textCursorDrawable="@color/colorLoginText"
                    android:backgroundTint="@color/colorLoginText"
                    android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_edit_text_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/profile_submit_button"
                    android:layout_width="wrap_content"
                    android:text="@string/submit"
                    android:textSize="@dimen/main_cancel_button_text_size"
                    android:textColor="@color/colorLoginText"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/profile_cancel_button"
                    android:layout_width="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="@dimen/main_cancel_button_text_size"
                    android:textColor="@color/colorLoginText"
                    android:layout_height="wrap_content" />

        </LinearLayout>

</RelativeLayout>
